packages/next-swc/crates/core/tests/errors/next-font-loaders/import-all/input.js
import * as googleFonts from '@next/font/google'
